# v360

./: README.md  v360.hpp  v360.py
examples/: CMakeLists.txt  find_cameras.py  run_camera.cpp  run_camera.py  shutdown.py  take_picture.py
